assets/css/scrollbar.css
.scrollable {
  height: 95vh;
  overflow-y: auto;
}

.scrollable2 {
  max-height: 65vh;
  overflow-y: auto;
}
.scrollable::-webkit-scrollbar,
.scrollable2::-webkit-scrollbar {
  width: 14px;
}

.scrollable::-webkit-scrollbar-track,
.scrollable2::-webkit-scrollbar-track {
  background: rgba(62, 61, 61, 0.25);
}

.scrollable::-webkit-scrollbar-thumb,
.scrollable2::-webkit-scrollbar-thumb {
  background: rgba(138, 136, 136, 0.294);
}

